test/functions/resolution/errors/testBadCallCandidates.7.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:68: error: unresolved call 'owned C.baz(42)'
testBadCallCandidates.chpl:30: note: this candidate did not match: C.baz(x: string)
testBadCallCandidates.chpl:68: note: because call actual argument #1 with type int(64)
testBadCallCandidates.chpl:30: note: is passed to formal 'x: string'
testBadCallCandidates.chpl:33: note: candidates are: type D.baz(x: int)
testBadCallCandidates.chpl:42: note:                 baz(x: C)
